tdf#118971: allow arrow keys to move images or drawing objects

Partially revert 2d5ce0e1b233c83f91481cd6b9306ac8de7f5ff8

Change-Id: Ie4c91529c1ce878f4b0474d815a3a88ed48769c2
Reviewed-on: https://gerrit.libreoffice.org/58318
Reviewed-by: Heiko Tietze <tietze.heiko@gmail.com>
Tested-by: Heiko Tietze <tietze.heiko@gmail.com>
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit e1d73cb5552c2566c6d7463ce001e555523f3d92)